--- a/donation.html
+++ b/donation.html
@@ -1,4 +1,5 @@
 <center>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <h2>It was my day if you donate me a half of dollars</h2>
 <div id="paypal-button-container"></div>
 <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD" data-sdk-integration-source="button-factory"></script>
@@ -22,7 +23,7 @@
       },
       onApprove: function(data, actions) {
           return actions.order.capture().then(function(details) {
-              alert('Transaction completed by ' + details.payer.name.given_name + '!');
+              swal("Sucessfully",details.payer.name.given_name + ' Make my day!', "success")
           });
       }
   }).render('#paypal-button-container');
